# opengl

./: CMakeLists.txt  CMakePresets.json
assets/shader/: core.fs  core.vs
dependency/glad/include/glad/: glad.h
dependency/glad/src/: glad.c
game/include/: camera.h  gamegl.h  mesh.h  model.h  texture.h  viewport.h
game/model/: cube.h  shapes.h
game/src/: gamegl.cpp  mouse.cpp  texture.cpp
opengl/include/: shader.h
